# review-plot

./: .gitignore  Cargo.toml  README.md  tsconfig.json
scripts/: scrape_geolocation.py
src/: client.rs  client_pool.rs  geolocate.rs  handlers.rs  main.rs
src/assets/: 404.html  index.html
src/assets/css/: loader.css  location.css  page.css  plot.css  search.css
src/assets/js/: app.js  app.js.map  least_squares.js  least_squares.js.map  location.js  location.js.map  plot.js  plot.js.map  search.js  search.js.map
src/assets/ts/: app.ts  least_squares.ts  location.ts  plot.ts  search.ts
src/injected_scripts/: check_empty_search.js  click_more_reviews.js  dump_review_requests.js  parse_search.js
