[package]
name = "review-plot"
author = "Alex Nichol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
bytes = { version = "1" }
clap = { version="3", features=["derive"] }
flate2 = { version = "1" }
futures = { version = "0.3" }
http = { version = "1" }
http-body-util = { version = "0.1" }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1" }
reqwest = { version = "0.12" }
serde = { version = "1" }
serde_json = { version = "1" }
thirtyfour = "0.32.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
url = { version = "2" }